add .texyed class to file ui.buttons.css
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/texyed/themes/default.css
+++ b/texyed/themes/default.css
@@ -3,7 +3,7 @@
  * @version		2012-07-25-1
  */
 
-@import url('ui.buttons.css');	/* TODO: add .texyed class */
+@import url('ui.buttons.css');
 
 .texyed-textarea {
 	padding: 1em;
