add readme, license, update license info in files
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/texyed/themes/default.css
+++ b/texyed/themes/default.css
@@ -1,5 +1,6 @@
 /** Texyed - default themes
  * @author		Jan Pecha, <janpecha@email.cz>
+ * @license		see file license.txt
  * @version		2012-07-25-1
  */
 
