--- a/texyed/themes/ui.buttons.css
+++ b/texyed/themes/ui.buttons.css
@@ -3,8 +3,8 @@
  * 
  * @author		Jan Pecha,	<janpecha@email.cz>
  * @copyright	Jan Pecha, 2011-2012
- * @license		http://typro.iunas.cz/license
- * @link		http://typro.iunas.cz/
+ * @license		see file license.txt
+ * @link		http://typro.iunas.cz/, http://github.com/janpecha/typro/
  * @version		2012-07-25-1
  */
 @media all {
