--- a/texyed/themes/default.css
+++ b/texyed/themes/default.css
@@ -36,8 +36,8 @@
 .texyed .ui-window {
 	width: 100%;
 	height: 100%;
-	overflow: auto;
-	background: rgba(30,30,30,0.9);
+	overflow: none;
+	background: rgba(20,20,20,0.95);
 	color: #fff;
 	position: absolute;
 	left: 0;
@@ -76,7 +76,8 @@
 
 .texyed .ui-window .ui-content {
 	padding: 1em;
-	overflow: auto;	
+	overflow: auto;
+	max-height: 90%;
 }
 .texyed .ui-window.ui-show {
 	display: block;
