--- a/texyed/themes/default.css
+++ b/texyed/themes/default.css
@@ -78,6 +78,7 @@
 	padding: 1em;
 	overflow: auto;
 	max-height: 90%;
+	height: 90%;
 }
 .texyed .ui-window.ui-show {
 	display: block;
@@ -104,5 +105,12 @@
 
 .texyed .ui-toolbar.ui-button-group .ui-button:first-child {
 	border-left-width: 0;
+}
+
+.texyed iframe.texyed-preview {
+	width: 100%;
+	height: 100%;
+	background: #fbfbfb;
+	border: 1px solid silver;
 }
 
