[style ui.buttons] comment updated
Signed-off-by: Jan Pecha <janpecha@email.cz>

--- a/texyed/themes/ui.buttons.css
+++ b/texyed/themes/ui.buttons.css
@@ -1,11 +1,11 @@
 /**
- * UI Buttons - based on Typro UI buttons
+ * UI Buttons - based on Typro UI buttons style
  * 
  * @author		Jan Pecha,	<janpecha@email.cz>
  * @copyright	Jan Pecha, 2011-2012
  * @license		see file license.txt
  * @link		http://typro.iunas.cz/, http://github.com/janpecha/typro/
- * @version		2012-07-25-1
+ * @version		2012-09-27-1
  */
 @media all {
 	/** Buttons - a, span, submit button, button
