--- a/texyed/themes/default.css
+++ b/texyed/themes/default.css
@@ -1,7 +1,7 @@
 /** Texyed - default themes
  * @author		Jan Pecha, <janpecha@email.cz>
  * @license		see file license.txt
- * @version		2012-07-25-1
+ * @version		2012-09-27-1
  */
 
 @import url('ui.buttons.css');
@@ -54,6 +54,7 @@
 	top: 0;
 	left: 0;
 	border-bottom: 1px solid #000;
+	z-index: 100;
 /*	font-size: 90%;*/
 }
 
@@ -75,11 +76,20 @@
 }
 
 .texyed .ui-window .ui-content {
-	padding: 1em;
+	padding: 2.8em 1em 1em;
+	border-top: 1px solid transparent;
 	overflow: auto;
-	max-height: 90%;
-	height: 90%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: 0;
+	top: 0;
+	left: 0;
 }
+
 .texyed .ui-window.ui-show {
 	display: block;
 }
